--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
-    "react-slideshow-image": "^3.3.1"
+    "react-slideshow-image": "^3.3.1",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
