--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slideshow-image": "^3.3.2",
+    "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
