--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "cookie-parser": "^1.4.5",
     "jquery": "^3.5.1",
+    "material-icons": "^0.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-mdl": "^2.1.0",
